--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.4",
@@ -15,6 +16,7 @@
     "framer-motion": "^12.9.1",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
+    "next-sitemap": "^4.2.3",
     "portfolio": "file:",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
