--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "portfolio": "file:",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-type-animation": "^3.2.0",
     "tailwind-merge": "^3.2.0"
   },
